<resources>
    <string name="app_name">Brain Wellness App</string>
    <string name="app_name_setting"><b>Brain Wellness App</b></string>
    <string name="segment_key_foram">X3sYYbQtro7xHI31AJppjMQ20AZlPdlS</string>
    <string name="segment_key_SunnySir">2ClHzzCF1JFEDocqe0Az8KSV4ybDcUdm</string>
    <string name="segment_key_real_2_live">bSzFiRNYlIY9mEnqFqiXYaU761H0M88o</string>
    <string name="segment_key_real_2_staging">AElbfjOaC16bvle4D7aHhTwbBsGs83zN</string>
    <string name="segment_key_real_1_live">Al8EubbxttJtx0GvcsQymw9ER1SR2Ovy</string>
    <string name="mansi_segment_key">"Zvo5vSa1Ih8CdMVilkKqzNf9UHMVTFuO"</string>
    <string name="ResponseCodesuccess">200</string>
    <string name="ResponseCodefail">401</string>
    <string name="ResponseCodeDeleted">403</string>
    <string name="stripe_test_key">pk_test_Mm4d65j7STTpLo0YrkYGmaWH00tQO1qMnv</string>
    <string name="stripe_live_key">pk_live_nmRApzuiZfmKRruPcnpYhurb00tFp2EYYP</string>
    <string name="sign_in">Sign In</string>
    <string name="reactive_plan">Please re-activate your membership plan</string>
    <string name="Foreground">Foreground</string>
    <string name="Background">Background</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_code_text">We will send you a code by SMS to confirm your mobile number.</string>
    <string name="F"><u>Not a Member? Register</u></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="how_refer_works">How Refer Works</string>
    <string name="privacy_policy_t_n_c">By clicking on Register or Sign up you agree to our</string>
    <string name="info_bwa_two">Your information is 100% confidential and never shared with anyone</string>
    <string name="get_the_code">Get SMS code</string>
    <string name="choose_your_country">Choose your country</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_sms">Enter SMS Code</string>
    <string name="resent_sms">Resend SMS</string>
    <string name="edit_phone_number">Edit mobile number</string>
    <string name="t_n_c">Terms &amp; Conditions</string>
    <string name="thank_u">Thank You!</string>
    <string name="thank_u_quotes">Congratulations on joining the Brain Wellness App Family.</string>
    <string name="explore_app">Explore app</string>
    <string name="view_invoice"><u>View Invoice</u></string>
    <string name="downloads">Downloads</string>
    <string name="invoices">Invoices</string>
    <string name="logout">Log Out</string>
    <string name="faq">FAQ</string>
    <string name="reminder">Reminder</string>
    <string name="billing_and_order">Billing and Order</string>
    <string name="view_profile">View Profile</string>
    <string name="profile">Profile</string>
    <string name="Full_Name">Full Name</string>
    <string name="Date_of_Birth">Date of Birth</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="Email_Address">Email Address</string>
    <string name="Downloads">Downloads</string>
    <string name="Invoice">Invoice</string>
    <string name="Billing_and_Order">Billing and Order</string>
    <string name="cancel_plan">Cancel</string>
    <string name="Cancel">Cancel</string>
    <string name="cancel_program_quotes">Are you sure you want to cancel your program?</string>
    <string name="cancel_quotes">Are you sure you want to cancel your subscription?</string>
    <string name="reminder_quotes">Are you sure you want to delete your reminder?</string>
    <string name="go_back">Go Back</string>
    <string name="Country">Country</string>
    <string name="Postcode">Postcode</string>
    <string name="State">State</string>
    <string name="Save">Save</string>
    <string name="Address_Line_One">Address Line 1</string>
    <string name="Address_Line_Two">Address Line 2 (Optional)</string>
    <string name="City">Suburb / Town / City</string>
    <string name="Card_Number">Card Number</string>
    <string name="Card_Holder_Name">Card Holder Name</string>
    <string name="Cvv">CVV</string>
    <string name="Add_New_Card">Add New Card</string>
    <string name="FAQ">FAQ</string>
    <string name="Disclaimer">Disclaimer</string>
    <string name="Audio">Audio</string>
    <string name="Playlist">Playlist</string>
    <string name="Help">Help</string>
    <string name="Reminder">Reminder</string>
    <string name="Set_a_Reminder">Set a Reminder</string>
    <string name="Set_Reminder">Set Reminder</string>
    <string name="Repeat">Repeat</string>
    <string name="Membership">Membership</string>
    <string name="month_free">Join Now – Get 1 Month Free</string>
    <string name="Order_Summary">Order Summary</string>
    <string name="Proceed_to_checkout">Proceed to checkout</string>
    <string name="disclaimer"><b>Disclaimer:</b> The Brain Wellness App offers a unique, alternative and drug free method created by our founder Terri Bowman aimed to assist people encountering struggles in their daily lives, to find inner peace and overcome negative thoughts and emotions (the Brain Wellness App Method).\n\nThe Brain Wellness App Method is not a scientific method. \n\nThe testimonials of our clients speak for themselves and we are so proud of the incredible results they have achieved – we want to help you and are committed to assisting you find a way to live a better life. However, as with any service, we accept that it may not be right for everyone and that results may vary from client to client. Accordingly, we make no promises or representations that our service will work for you but we invite you to try it for yourself.</string>
    <string name="Checkout">Checkout</string>
    <string name="Next">Next</string>
    <string name="Complete_Payment">Complete Payment</string>
    <string name="Explore">Explore</string>
    <string name="Recently_Played">Recently Played</string>
    <string name="My_Downloads">My Downloads</string>
    <string name="View_all">View all</string>
    <string name="Recommended">Recommended</string>
    <string name="Get_Inspired">Get Inspired !</string>
    <string name="Popular">Popular</string>
    <string name="Top_Categories">Top Categories</string>
    <string name="Appointment">Appointment</string>
    <string name="Next_Session">Next Session</string>
    <string name="Previous_Appointments">Previous Appointments</string>
    <string name="Create_playlist">Create playlist</string>
    <string name="give_playlist_name">Give your playlist a name.</string>
    <string name="Your_Created">Your Created</string>
    <string name="Suggested_Audios">Suggested Audios</string>
    <string name="Recommended_Audios">Recommended  Audios</string>
    <string name="Suggested_Playlist">Suggested Playlist</string>
    <string name="Recommendeds_Playlist">Recommended Playlist</string>
    <string name="View_order_details">View order details</string>
    <string name="Payment_information">Payment information</string>
    <string name="Order_summary">Order summary</string>
    <string name="NOW_PLAYING_FROM">NOW PLAYING FROM</string>
    <string name="Download_audio">Download audio</string>
    <string name="Like">Like</string>
    <string name="Liked">Liked</string>
    <string name="Add_to_Playlist">Add to Playlist</string>
    <string name="Add_to_Queue">Add to Queue</string>
    <string name="Shuffle">Shuffle</string>
    <string name="Go_to_queue">Go to queue</string>
    <string name="Directions">Directions</string>
    <string name="Now_Playing">Now playing</string>
    <string name="Next_in_queue">Next in queue</string>
    <string name="close_queue">Close queue</string>
    <string name="Self_development">Self-development</string>
    <string name="Add_Audio">Add Audio</string>
    <string name="Add_Audios">Add Audios</string>
    <string name="Suggested">Suggested</string>
    <string name="Session">Session</string>
    <string name="Appointment_Details">Appointment Details</string>
    <string name="Complete_the_Booklet">Complete the Booklet</string>
    <string name="Download_PDF">Download PDF</string>
    <string name="Book_Now">Book Now</string>
    <string name="Audios_in_Playlist">Audios in Playlist</string>
    <string name="New_PLaylist">New PLaylist</string>
    <string name="Rename_playlist">Rename playlist</string>
    <string name="Liked_playlist">Like playlist</string>
    <string name="Delete_playlist">Delete playlist</string>
    <string name="Download_playlist">Download playlist</string>
    <string name="Add_playlist">Add to playlist</string>
    <string name="Add_playlist1">Add Playlist</string>
    <string name="delete_quotes">Are you sure you want to delete Self-development playlist?</string>
    <string name="Close">Close</string>
    <string name="Description">Description</string>
    <string name="Resource">Resource</string>
    <string name="Resources">Resources</string>
    <string name="Select_reason">Select reason</string>
    <string name="logout_quotes">Are you sure you want to log out Brain Wellness App?</string>
    <string name="Discover_More">Discover More</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="no_server_found">You are not currently connected to internet. Please try again.!</string>
    <string name="not_valid_number">Please enter a valid mobile number</string>
    <string name="not_valid_mobile_number">Please use a valid mobile number</string>
    <string name="not_valids_mobile_number">Please enter a valid mobile number</string>
    <string name="no_add_digits">Wait a sec! We need to exchange digits to get started</string>
    <string name="Please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="Australia">Australia</string>
    <string name="code">+61</string>
    <string name="my_download">MyDownload</string>
    <string name="my_like">MyLike</string>
    <string name="recently_played">Recently Played</string>
    <string name="recommended">Recommended</string>
    <string name="recommended_audio">Recommended Audio</string>
    <string name="Library">Library</string>
    <string name="get_inspired">Get Inspired</string>
    <string name="popular">Popular</string>
    <string name="sucess_playlist">Successfully added to playlist</string>
    <string name="Done">Done</string>
    <string name="title_home">Home</string>
    <string name="title_Empower">Empower</string>
    <string name="title_Elevate">Elevate</string>
    <string name="title_Profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="tap_anywhere_to_continue">TAP anywhere to continue</string>
    <string name="go_to_playlist">Go to playlist</string>
    <string name="add_one_user">Add One User</string>
    <string name="long_lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="proceed_with_adding_new_user">Proceed with adding New Person</string>
    <string name="Continue">Continue</string>
    <string name="download_response"><u>Download Response</u></string>
    <string name="consultation_booklet">Consultation Booklet</string>
    <string name="please_complete_the_brain_wellness_spa_treatment_booklet_the_completion_of_this_booklet_will_give_your_facilitator_read_more">Please complete the Brain Wellness App treatment booklet. The completion of this booklet will give your Facilitator <b>Read More...</b></string>
    <string name="personal_confidentiality_clause">Personal Confidentiality Clause</string>
    <string name="your_personal_information_is_important_to_us_and_as_such_we_protect_that_information_by_adhering_to_the_strict_privacy_read_more">Your personal information is important to us and as such we protect that information by adhering to the strict privacy <b>Read More...</b></string>
</resources>