<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_Home">

    <fragment
        android:id="@+id/navigation_Home"
        android:name="com.brainwellnessspa.dashboardModule.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_Manage"
        android:name="com.brainwellnessspa.dashboardModule.manage.ManageFragment"
        android:label="@string/title_enrich"
        tools:layout="@layout/fragment_manage" />

    <fragment
        android:id="@+id/navigation_Wellness"
        android:name="com.brainwellnessspa.dashboardModule.wellness.WellnessFragment"
        android:label="@string/title_Empower"
        tools:layout="@layout/fragment_wellness" />

    <fragment
        android:id="@+id/navigation_Elevate"
        android:name="com.brainwellnessspa.dashboardModule.elevate.ElevateFragment"
        android:label="@string/title_Elevate"
        tools:layout="@layout/fragment_elevate" />

    <fragment
        android:id="@+id/navigation_Profile"
        android:name="com.brainwellnessspa.dashboardModule.profile.ProfileFragment"
        android:label="@string/title_Profile"
        tools:layout="@layout/fragment_profile" />

</navigation>