<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0sdp"
                android:layout_gravity="center"
                android:layout_weight="0.6"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_session_done_bg"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0sdp"
                android:layout_weight="0.4"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@id/ivLogo"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/tvSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="@string/long_lorem"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sdp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/tvViewInvoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:paddingTop="@dimen/_16sdp"
                    android:text="@string/download_response"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_15sdp"
                    tools:ignore="SpUsage" />



            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:background="@drawable/light_green_rounded_filled"
            android:fontFamily="@font/montserrat_bold"
            android:paddingHorizontal="@dimen/_55sdp"
            android:paddingVertical="@dimen/_4sdp"
            android:text="@string/Done"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>