<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0sdp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_60sdp"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0sdp"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/thank_u"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_40sdp"
                    app:layout_constraintTop_toBottomOf="@id/ivLogo"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/tvSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_4sdp"
                    android:text="@string/thank_u_quotes"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sdp"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"
                    tools:ignore="SpUsage" />

                <Button
                    android:id="@+id/btnExplore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:background="@drawable/light_green_rounded_filled"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingHorizontal="@dimen/_55sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:text="@string/explore_app"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSubTitle" />

                <Button
                    android:id="@+id/btnAddCouser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/light_green_rounded_unfilled"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingVertical="@dimen/_2sdp"
                    android:text="@string/add_one_user"
                    android:textColor="@color/app_theme_color"
                    android:textSize="@dimen/_13sdp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/tvViewInvoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:paddingTop="@dimen/_16sdp"
                    android:text="@string/view_invoice"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@id/btnSendCode"
                    tools:ignore="SpUsage" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>