<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".dashboardModule.session.notUsed.SessionBookletContinueActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llContinue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_400sdp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        android:src="@drawable/session_booklet_bg" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_16sdp">

                        <TextView
                            android:id="@+id/tvCETitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_40sdp"
                            android:fontFamily="@font/montserrat_bold"
                            android:gravity="center"
                            android:text="@string/consultation_booklet"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp"
                            tools:ignore="SpUsage" />

                        <TextView
                            android:id="@+id/tvCESubTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:fontFamily="@font/montserrat_regular"
                            android:gravity="center"
                            android:lineSpacingExtra="@dimen/_4sdp"
                            android:text="@string/please_complete_the_brain_wellness_spa_treatment_booklet_the_completion_of_this_booklet_will_give_your_facilitator_read_more"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp"
                            tools:ignore="SpUsage" />


                        <TextView
                            android:id="@+id/tvSubCETitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_40sdp"
                            android:fontFamily="@font/montserrat_bold"
                            android:gravity="center"
                            android:text="@string/personal_confidentiality_clause"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp"
                            tools:ignore="SpUsage" />

                        <TextView
                            android:id="@+id/tvSubCESubTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:fontFamily="@font/montserrat_regular"
                            android:gravity="center"
                            android:lineSpacingExtra="@dimen/_4sdp"
                            android:text="@string/your_personal_information_is_important_to_us_and_as_such_we_protect_that_information_by_adhering_to_the_strict_privacy_read_more"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp"
                            tools:ignore="SpUsage" />


                    <Button
                        android:id="@+id/btnContinue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginHorizontal="@dimen/_33sdp"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:background="@drawable/light_green_rounded_filled"
                        android:fontFamily="@font/montserrat_medium"
                        android:paddingVertical="@dimen/_2sdp"
                        android:text="@string/Continue"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>